--- a/src/styles/partials/_index.scss
+++ b/src/styles/partials/_index.scss
@@ -1,9 +1,11 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color: blue;
+	background-image: url(../../images/light_wood.png);
+	background-repeat: repeat;
+	background-color: #efefef;
+  	margin: 0;
+  	padding: 0;
 }
 
 .wine-item {
-	background-color: #fff;
+	background-color: transparent;
 }
