--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -37,6 +37,12 @@ p {
     outline:0;
 }
 
+a {
+    text-decoration: none;
+    
+    &:hover { text-decoration: none; }
+}
+
 header,
 nav,
 section,
