adding react bootstrap navbar component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,3 @@
-@import "./partials/base.scss";
-@import "./partials/index.scss";
+@import "./partials/base";
+@import "./partials/index";
+@import "./partials/navbar";
