adding main header component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
 @import "./partials/base.scss";
 @import "./partials/index.scss";
+@import "./partials/main-header";
 @import "./partials/side-menu";
