--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
-@import "./partials/base.scss";
-@import "./partials/index.scss";
+@import "./partials/base";
+@import "./partials/index";
+@import "./partials/wine-item";
 @import "./partials/main-header";
 @import "./partials/side-menu";
