--- a/src/styles/partials/_main-header.scss
+++ b/src/styles/partials/_main-header.scss
@@ -1,9 +1,41 @@
 header {
 	width: 100%;
-	min-height: 450px;
+	height: 250px;
 	box-sizing: border-box;
 
-	background-color: #93e5f2;
+	.header-bg {
+		width: 100%;
+		height: 100%;
+		background-image: url(../../images/wine-grapes.jpg);
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: 768px auto;
+		/* background-color: #93e5f2; */
+	}
+
+	@media only screen and (min-width: 768px) {
+		height: 300px;
+
+		.header-bg {
+			background-size: 992px auto;
+		}
+	}
+
+	@media only screen and (min-width: 992px) {
+		height: 320px;
+
+		.header-bg {
+			background-size: 1200px auto;
+		}
+	}
+
+	@media only screen and (min-width: 1200px) {
+		height: 412px;
+
+		.header-bg {
+			background-size: contain;
+		}
+	}
 
 	.top-bar {
 		display: block;
