--- a/src/styles/partials/_wine-item.scss
+++ b/src/styles/partials/_wine-item.scss
@@ -15,6 +15,10 @@
 		width: 298px; /* 4 columns */
 	}
 
+	@media only screen and (min-width: 1514px) {
+		width: 302px; /* 5 columns */
+	}
+
 	.thumbnail {
 		text-align: center;
 		margin-bottom: 0px;
