--- a/src/styles/partials/_main-header.scss
+++ b/src/styles/partials/_main-header.scss
@@ -2,6 +2,7 @@ header {
 	width: 100%;
 	height: 250px;
 	box-sizing: border-box;
+	border-bottom: 8px solid #fff;
 
 	.header-bg {
 		width: 100%;
@@ -57,8 +58,10 @@ header {
 		}
 
 		&.sticky {
-			background-color: #500009;
+			background-color: #420c1a;
 			padding: 8px;
+			-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+			box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 
 			h1 {
 				font-size: 32px;
