--- a/src/styles/partials/_side-menu.scss
+++ b/src/styles/partials/_side-menu.scss
@@ -5,7 +5,7 @@
 		z-index: 1000;
 		width: 100%;
 		height: 100%;
-		background: rgba(0, 0, 0, 0.3);
+		background: rgb(0, 0, 0);
 		opacity: 0;
 		transition: opacity 0.3s, transform 0s 0.3s;
 		transform: translate3d(100%, 0px, 0px);
@@ -42,7 +42,7 @@
 
 		.sm-overlay {
 			transform: none;
-			opacity: 1;
+			opacity: 0.5;
 		}
 
 		.menu-wrap {
