--- a/src/styles/partials/_main-header.scss
+++ b/src/styles/partials/_main-header.scss
@@ -60,8 +60,8 @@ header {
 		&.sticky {
 			background-color: #420c1a;
 			padding: 8px;
-			-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
-			box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+			-webkit-box-shadow: 0 1px 15px rgba(0,0,0,.3);
+			box-shadow: 0 1px 15px rgba(0,0,0,.3);
 
 			h1 {
 				font-size: 32px;
