removing scroll function from main head component and placing it in app

--- a/src/styles/partials/_modal.scss
+++ b/src/styles/partials/_modal.scss
@@ -30,10 +30,13 @@
 			margin-top: 18px;
 			font-size: 22px;
 			font-weight: bold;
+
+			min-height: 24px;
+			box-sizing: border-box;
 		}
 
 		h3 {
-			margin-top: 42px;
+			margin-top: 40px;
 		}
 	}
 
