--- a/src/styles/partials/_side-menu.scss
+++ b/src/styles/partials/_side-menu.scss
@@ -62,9 +62,11 @@
 	.sm-button-open {
 		width: 33px;
 		position: fixed;
-		top: 13px;
-		right: 13px;
+		top: 30px;
+		right: 30px;
 		z-index: 1000;
+
+		transition: 0.3s;
 
 		&:hover { cursor: pointer; }
 
@@ -74,6 +76,11 @@
 			height: 5px;
 			background-color: #e6efec;
 			margin-bottom: 5px;
+		}
+
+		&.sticky {
+			top: 13px;
+			right: 13px;
 		}
 	}
 
