--- a/src/styles/partials/_modal.scss
+++ b/src/styles/partials/_modal.scss
@@ -5,9 +5,40 @@
 	border-top: 10px solid #fff;
 	border-radius: 6px 6px 0px 0px;
 
+	position: relative;
+
 	&.type-Red { border-top-color: #b10015; }
 	&.type-White,
 	&.type-Sparkling { border-top-color: #fdce66; }
+
+	.sm-button-close {
+		display: block;
+		width: 30px;
+		height: 30px;
+		position: absolute;
+		right: 10px;
+		padding-top: 12px;
+		transform: rotate(45deg);
+
+		&:hover { cursor: pointer; }
+
+		span {
+			display: block;
+			background-color: #420c1a;
+
+			&.cross-one {
+				width: 100%;
+				height: 5px;
+			}
+			&.cross-two {
+				width: 5px;
+				height: 30px;
+				position: absolute;
+				top: 0px;
+				left: 12px;
+			}
+		}
+	}
 }
 
 .modal-inner {
