--- a/src/styles/partials/_side-menu.scss
+++ b/src/styles/partials/_side-menu.scss
@@ -26,6 +26,7 @@
 			background-color: #1e282a;
 
 			color: #e6efec;
+			padding: 16px;
 		}
 	}
 
@@ -35,8 +36,6 @@
 		height: 30px;
 		position: relative;
 		padding-top: 12px;
-		top: 5px;
-		left: 5px;
 		transform: rotate(45deg);
 
 		&:hover { cursor: pointer; }
