--- a/src/styles/partials/_modal.scss
+++ b/src/styles/partials/_modal.scss
@@ -47,35 +47,49 @@
 	top: -80px;
 	margin-bottom: -80px;
 
-	img {
-		float: left;
-		border: 6px solid #fff;
-		border-radius: 6px;
+	h4 {
+		font-size: 26px;
+		font-weight: bold;
+		margin-bottom: 4px;
 	}
 
-	> div {
-		float: left;
-		padding-left: 16px;
+	h3 {
+		margin-bottom: 12px;
+		line-height: 30px;
+	}
 
-		h4 {
-			margin-top: 18px;
-			font-size: 22px;
-			font-weight: bold;
+	p.margin-bottom { margin-bottom: 8px; }
 
-			min-height: 24px;
-			box-sizing: border-box;
+	.modal-inner-head {
+		margin-left: -6px;
+		margin-bottom: 14px;
+
+		img {
+			float: left;
+			border: 6px solid #fff;
+			border-radius: 6px;
 		}
 
-		h3 {
-			margin-top: 40px;
+		> div {
+			float: left;
+			padding-left: 16px;
+			margin-top: 80px;
+
+			p {
+				font-size: 16px;
+
+				span { font-size: 20px; }
+			}
 		}
 	}
 
-	> ul {
-		clear: both;
-		list-style-type: none;
-		padding-top: 16px;
-		padding-left: 0px;
+	table {
+		margin-top: 20px;
+
+		td {
+			&:first-child { padding-right: 8px; }
+		}
 	}
+
 }
 
