adding in total and in stock wine numbers

--- a/src/styles/partials/_side-menu.scss
+++ b/src/styles/partials/_side-menu.scss
@@ -55,7 +55,7 @@
 				}
 			}
 
-			ul {
+			/* ul {
 				padding-left: 20px;
 
 				&.last-ul { margin-bottom: 24px; }
@@ -72,7 +72,7 @@
 						}
 					}
 				}
-			}
+			} */
 		}
 	}
 
