working star rating functionality

--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -9,7 +9,8 @@ html {
 body {
     position: relative;
     overflow-x: hidden;
-    font-family: Verdana, Helvetica, Arial, sans-serif;
+    font-family: 'Varela Round', sans-serif;
+    /* font-family: Verdana, Helvetica, Arial, sans-serif; */
 }
 
 html,
