--- a/src/styles/partials/_modal.scss
+++ b/src/styles/partials/_modal.scss
@@ -62,7 +62,7 @@
 		margin-left: -6px;
 		margin-bottom: 14px;
 
-		img {
+		> img {
 			float: left;
 			border: 6px solid #fff;
 			border-radius: 6px;
@@ -77,6 +77,13 @@
 				font-size: 16px;
 
 				span { font-size: 20px; }
+			}
+		}
+
+		.star-rating {
+			img {
+				width: 26px;
+				display: inline;
 			}
 		}
 	}
