--- a/src/styles/partials/_index.scss
+++ b/src/styles/partials/_index.scss
@@ -68,4 +68,6 @@ p.margin-bottom { margin-bottom: 8px; }
 		background-color: #420c1a;
 		border-color: #e6efec;
 	}
+
+	&.hide { display: none; }
 }
